[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pydantic-devtools"
version = "0.1.0"
description = "Devtools for the Pydantic library"
authors = [
    {name = "Victorien", email = "contact@vctrn.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=11.0.0",  # max depth in pretty printing added.
    "pydantic>=2.8.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.3",
    "pyright>=1.1.378",
]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E",      # pycodestyle (E)
    "W",      # pycodestyle (W)
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "PL",     # Pylint
    "RUF",    # Ruff
    "RUF022", # Ruff-preview
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T10",    # flake8-debugger
    "FA",     # flake8-future-annotations
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "B904",
    "PLR0912",
    "PLR0915",
]
